# santokit

./: .eslintrc.json  .gitignore  AGENTS.md  API.md  APPENDIX-DOC-FORMATS.md  Cargo.toml  INSPECTION.md  MOVE.md  ONEPAGE.md  README.md  WORK.md  docker-compose.yml  drizzle.config.ts  go.work  go.work.sum  nx.json  package-lock.json  package.json  pnpm-lock.yaml  stk.config.json  test-casbin.ts  test_output.txt  tmp-integration-context.json  tsconfig.json  wrangler.jsonc
tests/integration_py/: README.md  conftest.py  docker-compose.yaml  dsl.py  pyproject.toml
tests/integration_py/fixtures/array_validation/schema/: users.yaml
tests/integration_py/fixtures/cel_condition/config/: permissions.yaml
tests/integration_py/fixtures/cel_condition/schema/: users.yaml
tests/integration_py/fixtures/cel_condition_literal/config/: permissions.yaml
tests/integration_py/fixtures/cel_condition_literal/schema/: users.yaml
tests/integration_py/fixtures/cel_condition_unsupported/config/: permissions.yaml
tests/integration_py/fixtures/column_permissions/config/: permissions.yaml
tests/integration_py/fixtures/column_permissions/schema/: users.yaml
tests/integration_py/fixtures/column_prefix/config/: permissions.yaml
tests/integration_py/fixtures/column_prefix/schema/: users.yaml
tests/integration_py/fixtures/expand/config/: permissions.yaml
tests/integration_py/fixtures/expand/schema/: posts.yaml  users.yaml
tests/integration_py/fixtures/expand_static/config/: permissions.yaml
tests/integration_py/fixtures/expand_static/schema/: posts.yaml
tests/integration_py/fixtures/logics_call/config/: permissions.yaml
tests/integration_py/fixtures/logics_call/logics/: admin_only.sql  condition_malformed.sql  condition_owner_echo.sql  condition_owner_insert.sql  condition_resource_unsupported.sql  condition_role_echo.sql  default_params.sql  get_items.sql  insert_item.sql  public_hello.sql  whoami.sql
tests/integration_py/fixtures/logics_call/schema/: items.yaml
tests/integration_py/fixtures/sdk_type_mapping/config/: permissions.yaml
tests/integration_py/fixtures/sdk_type_mapping/schema/: types.yaml
tests/integration_py/fixtures/sdk_type_mapping_unknown/config/: permissions.yaml
tests/integration_py/fixtures/sdk_type_mapping_unknown/schema/: types.yaml
tests/integration_py/fixtures/storage_cascade_delete/config/: permissions.yaml  storage.yaml
tests/integration_py/fixtures/storage_cascade_delete/schema/: files.yaml
tests/integration_py/fixtures/storage_delete/config/: storage.yaml
tests/integration_py/fixtures/storage_download_sign/config/: storage.yaml
tests/integration_py/fixtures/storage_multipart/config/: permissions.yaml  storage.yaml
tests/integration_py/fixtures/storage_path_binding/config/: storage.yaml
tests/integration_py/fixtures/storage_upload_sign/config/: storage.yaml
tests/integration_py/fixtures/storage_upload_sign/schema/: users.yaml
tests/integration_py/tests/: test_auth.py  test_crud.py  test_flow_01_operator_bootstrap.py  test_flow_02_operator_apikey.py  test_flow_03_enduser_login_hub_issuer.py  test_flow_04_enduser_login_external_oidc.py  test_flow_05_enduser_call_crud.py  test_flow_06_operator_schema_change.py  test_flow_07_operator_permissions_change.py  test_flow_08_release_promotion_rollback.py  test_flow_09_enduser_multi_project_login.py  test_flow_10_crud_advanced.py  test_flow_11_crud_expand.py  test_flow_12_crud_pagination_sorting.py  test_flow_13_cel_condition.py  test_flow_14_column_prefix.py  test_flow_15_logics_call.py  test_flow_16_column_permissions.py  test_logics.py  test_operator.py  test_security.py
tests/integration_py/tests/capabilities/auth/: test_auth_001_hub_issuer_login.py  test_auth_002_oidc_provider_config.py  test_auth_003_multi_project_login.py  test_auth_004_oidc_link.py
tests/integration_py/tests/capabilities/crud/: test_crud_001_basic.py  test_crud_002_advanced.py  test_crud_003_expand.py  test_crud_004_pagination_sorting.py  test_crud_005_array_validation.py
tests/integration_py/tests/capabilities/logics/: test_logics_001_whoami.py  test_logics_002_public_hello.py  test_logics_003_exec_affected.py  test_logics_004_param_required.py  test_logics_006_role_guard.py  (+3 more)
tests/integration_py/tests/helpers/: assertions.py
tests/integration_py/tests/spec/: coverage_matrix.md  test_spec_error_envelope.py  test_spec_response_shapes.py  test_spec_status_codes.py  test_spec_where_safety_gate.py
(+368 files in other folders)
