[workspace]
resolver = "2"
members = [
    "packages/services/hub",
    "packages/services/bridge",
    "packages/tools/cli",
    "packages/libs/core",
    "packages/libs/sql",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/santoki/phoenix"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.43", features = ["full"] }

# Web Framework
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Database
sea-query = { version = "0.32", features = ["backend-postgres"] }
sea-orm = { version = "1.1", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
inquire = "0.7"
indicatif = "0.17"
comfy-table = "7.1"

# Auth & Crypto
pasetors = "0.7"
rusty_paseto = "0.8"
argon2 = "0.5"
rand = "0.8"
chacha20poly1305 = "0.10"
jsonwebtoken = "9.3"

# CEL (Common Expression Language)
cel-interpreter = "0.8"

# Utilities
thiserror = "2.0"
anyhow = "1.0"
futures = "0.3"
walkdir = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
ulid = { version = "1.1", features = ["serde"] }
url = "2.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
dotenvy = "0.15"
aws-config = "1.5"
aws-sdk-s3 = "1.60"

# Internal crates
stk-core = { path = "packages/libs/core" }
stk-sql = { path = "packages/libs/sql" }

[profile.release]
lto = true
codegen-units = 1
strip = true
