[project]
name = "santokit-integration-tests"
version = "0.1.0"
description = "Integration tests for Santokit (Hub/Bridge)"
requires-python = ">=3.13"
dependencies = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "requests>=2.32",
  "testcontainers>=4.9",
  "docker>=7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
markers = [
  "domain(name): capability domain grouping",
  "capability(id): capability id grouping",
  "spec(name): cross-capability spec contract tests",
]

[tool.uv]
python-preference = "only-system"
